--- a/Pages/Inventory/Index.cshtml
+++ b/Pages/Inventory/Index.cshtml
@@ -4,81 +4,72 @@
 	ViewData["Title"] = "Inventory";
 }
 
-<div class="content">
-    <!-- Breadcrumb -->
-    <div class="row pb-2" aria-label="breadcrumb">
-        <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-                <li class="breadcrumb-item active"><a><strong>Inventory</strong></a></li>
-            </ol>
-        </nav>
-    </div>
+<!-- Breadcrumb -->
+<div class="row pb-2" aria-label="breadcrumb">
+    <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
+            <li class="breadcrumb-item active"><a><strong>Inventory</strong></a></li>
+        </ol>
+    </nav>
+</div>
 
-    <!-- Title and Add Button-->
-    <div class="row p-2">
-        <div class="col d-flex align-items-center">
-            <h1><i class="bi bi-box"></i>Inventory</h1>
-        </div>
-
-        <div class="col-auto d-flex justify-content-between align-items-center">
-            <div class="d-flex justify-content-end align-items-center">
-                <a class="btn btn-primary mb-2" href="/inventory/add">
-                    <i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
-                    Add Batch
-                </a>
-            </div>
-        </div>
+<!-- Title and Add Button-->
+<div class="row mb-2">
+    <div class="col-12 d-flex align-items-center justify-content-between">
+        <h1><i class="bi bi-person-lines-fill" style="padding: 0 5px 0 5px;"></i>Inventory</h1>
     </div>
+</div>
 
-    <div class="row p-2">
-        <div class="col-lg-12">
-            <table id="inventory-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
-                <thead>
-                    <tr>
-                        <th width="5%">#</th>
-                        <th width="20%">Inventory ID</th>
-                        <th width="15%">LGU ID</th>
-                        <th width="15%">Center Log ID</th>
-                        <th width="15%">Assignment ID</th>
-                        <th width="15%">Dispatch Date</th>
-                        <th width="15%">Receive Date</th>
-                        <th width="10%">Status</th>
-                        <th> </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td width="5%">1</td>
-                        <th width="15%">INV0000001</th>
-                        <td width="15%">LGU0000001</td>
-                        <td width="15%">CLG0000001</td>
-                        <td width="15%">ECS0000012</td>
-                        <td width="15%">11/01/2022</td>
-                        <td width="15%">11/02/2022</td>
-                        <td width="10%">
-                            <span class="badge bg-success">Received</span>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center" style="gap: 5px">
-                                <p><button class="btn btn-primary btn-small me-2">Receive</button></p>
-                                <div class="d-inline position-relative">
-                                    <a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="bi bi-three-dots-vertical"></i>
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="recordOptions">
-                                        <li><a href="/disaster/view" class="dropdown-item">View Inclusion</a></li>
-                                        <li><a class="dropdown-item" href="#">Edit</a></li>
-                                        <li><a href="#" class="dropdown-item">Delete</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+
+<!-- Table -->
+<div class="row">
+    <table id="inventory-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th width="5%">#</th>
+                <th width="20%">Disaster Name</th>
+                <th width="20%">Center Name</th>
+                <th width="22%">Item Name</th>
+                <th width="10%">Type</th>
+                <th width="15%">Unit Measure</th>
+                <th width="18%">
+                    Qty<br />
+                    <small>(Remaining/Total)</small>
+                </th>
+                <td width="25%" style="text-align:left;">Remarks</td>
+                <th> </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <th>Gaya Gaya Fire</th>
+                <td>Sample Evacuation Center</td>
+                <td>Canned Goods</td>
+                <td>Food</td>
+                <td>Kg</td>
+                <td>100</td>
+                <td>   </td>
+
+                <!---->
+                <td width="5%">
+                    <div class="d-inline position-relative">
+                        <a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-three-dots-vertical"></i>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="recordOptions">
+                            <li>
+                                <a class="dropdown-item" href="">
+                                    View the Inventory
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
 
 <!-- Making the table responsive -->
@@ -93,24 +84,3 @@
 		});
 	});
 </script>
-
-<!-- Deletion Modal -->
-<div class="modal" id="deleteConfirmationModal" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Confirm Delete</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>Are you sure you want to delete this batch?</p>
-                <p><strong class="text-danger">This cannot be undone.</strong></p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
-            </div>
-        </div>
-    </div>
-</div>
-
