--- a/Pages/EvacuationCenter/Add.cshtml
+++ b/Pages/EvacuationCenter/Add.cshtml
@@ -27,178 +27,157 @@
 
 <style>
 	.input-facility {
-		width: 80px;
-		margin-right: 10px;
+		width: 100px;
 	}
 
 	.label-facility {
 		padding-top: 10px;
-	}
-
-	.label-container {
-		white-space: nowrap;
-	}
-
-	.mx-auto {
-		width: 120px;
+		padding-left: 10px;
 	}
 </style>
 
-<div class="container p-2 form-container">
+<div class="bg-light rounded px-2 py-0 my-3 text-center">
+	<div class="col-lg-8 mx-auto"> <!--NOTE: Labels are longer so column sizes here are larger-->
+		<form method="POST">
+			<h1 class="display-5 fw-bold">Add Evacuation Center</h1>
+			<br />
 
-	<div class="container mt-4" id="disaster-form-container">
-
-		<div class="row pt-4">
-			<div class="col text-center">
-				<h1>Add Evacuation Center</h1>
+			<!-- Evacuation Center Name -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="centerName">Evacuation Center Name:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" name="centerName" value="@Model.evacuationInfo.centerName" required maxlength="65" />
+				</div>
 			</div>
-		</div>
 
-		<div class="row pt-4">
-			<form method="POST">
-				<div class="row mb-3">
-					<p class="text-danger text-end">* Required field</p>
+			<!-- Evacuation Center Name -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="centerType">Type of Evacuation Center:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
+					<select class="form-select" name="centerType" required>
+						<option value="" selected disabled>Select Evacuation Center Type</option>
+						<option value="School EC">School EC</option>
+						<option value="Community-based EC">Community-based EC</option>
+					</select>
 				</div>
-				<div class="row">
-					<!-- Evacution Center Name -->
-					<div class="mb-3">
-						<label class="form-label">
-							Evacuation Center Name:
-							<span class="text-danger" style="padding: 5px">*</span>
-						</label>
-						<input type="text" class="form-control" name="centerName" value="@Model.evacuationInfo.centerName" required maxlength="65" />
-					</div>
+			</div>
 
-					<!-- Evacuation Center Type -->
-					<div class="mb-3">
-						<label class="form-label">
-							Type of Evacuation Center:
-							<span class="text-danger" style="padding: 5px">*</span>
-						</label>
-						<select class="form-select" name="centerType" required>
-							<option value="" selected disabled>Select Evacuation Center Type</option>
-							<option value="School EC">School EC</option>
-							<option value="Community-based EC">Community-based EC</option>
-						</select>
-					</div>
+			<!-- Street Address -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="streetAddress">Street Address:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" name="streetAddress" value="@Model.evacuationInfo.streetAddress" required maxlength="85" />
+				</div>
+			</div>
 
-					<!-- Street Address -->
-					<div class="mb-3">
-						<label class="form-label">
-							Street Address:
-							<span class="text-danger" style="padding: 5px">*</span>
-						</label>
-						<input type="text" class="form-control" name="streetAddress" value="@Model.evacuationInfo.streetAddress" required maxlength="85" />
-					</div>
-
-					<!-- Barangay -->
-					<div class="mb-3">
-						<label class="form-label">
-							Barangay:
-							<span class="text-danger" style="padding: 5px">*</span>
-						</label>
-						<select class="form-select" name="barangayID" id="barangayID" required>
-							<option value="" selected disabled>Select Barangay</option>
-							@if (Model.Barangays != null)
+			<!-- Barangay -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="barangayID">Street Address:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
+					<select class="form-select" name="barangayID" id="barangayID" required>
+						<option value="" selected disabled>Select Barangay</option>
+						@if (Model.Barangays != null)
+						{
+							@foreach (var type in Model.Barangays)
 							{
-								@foreach (var type in Model.Barangays)
-								{
-									<option value="@type.barangayID">@type.barangayName</option>
-								}
+								<option value="@type.barangayID">@type.barangayName</option>
 							}
-						</select>
-					</div>
-
-					<!-- Mobile Number -->
-					<div class="mb-3">
-						<label class="form-label">Mobile Number:</label>
-						<input type="tel" class="form-control" name="mobileNum" id="mobileNum" value="@Model.evacuationInfo.mobileNum" placeholder="09XXXXXXXXX" maxlength="11" pattern="[0-9]{11}" title="Enter digits only." />
-					</div>
-					
-					<!-- Telephone Number -->
-					<div class="mb-3">
-						<label class="form-label">Telephone Number:</label>
-						<input type="tel" class="form-control" name="telephoneNum" id="telephoneNum" value="@Model.evacuationInfo.telephoneNum" placeholder="044XXXYYYY" maxlength="10" pattern="[0-9]{10}" title="Enter digits only." />
-					</div>
+						}
+					</select>
 				</div>
+			</div>
 
-				<!-- Maximum Capacity -->
-				<div class="mb-3 mt-3 text-center">
-					<label class="form-label">
-						Maximum Capacity:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
-					<input type="number" class="form-control mx-auto" name="maxCapacity" value="@Model.evacuationInfo.maxCapacity" required min="1" />
+			<!-- Mobile Number -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="barangayID">Mobile Number:</label>
+				<div class="col-sm-8">
+					<input type="tel" class="form-control" name="mobileNum" id="mobileNum" value="@Model.evacuationInfo.mobileNum" placeholder="09XXXXXXXXX" maxlength="11" pattern="[0-9]{11}" title="Enter digits only." />
 				</div>
+			</div>
 
-				<!-- Available Facilities -->
-				<div class="mb-3 mt-4 text-center">
-					<label class="form-label">
-						Available Facilities:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>				
-					<div class="row justify-content-center">
-						<div class="col-md-4">
-							<!-- Toilets -->
-							<div class="mb-3">
-								<div class="d-flex align-items-center">
-									<input type="number" class="form-control input-facility" name="toilet" value="@Model.evacuationInfo.toilet" placeholder="0" step="1" min="0" required />
-									<label class="form-label label-facility">Toilets</label>
-								</div>
-							</div>
+			<!-- Telephone Number -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="telephoneNum">Telephone Number:</label>
+				<div class="col-sm-8">
+					<input type="tel" class="form-control" name="telephoneNum" id="telephoneNum" value="@Model.evacuationInfo.telephoneNum" placeholder="044XXXYYYY" maxlength="10" pattern="[0-9]{10}" title="Enter digits only." />
+				</div>
+			</div>
 
-							<!-- Bathing Cubicle -->
-							<div class="mb-3">
-								<div class="d-flex align-items-center">
-									<input type="number" class="form-control input-facility" name="bathingCubicle" value="@Model.evacuationInfo.bathingCubicle" placeholder="0" step="1" min="0" required />
-									<label class="form-label label-facility">Bathing Cubicle</label>
-								</div>
-							</div>
+			<!-- Maximum Capacity -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="maxCapacity">Maximum Capacity:<span class="text-danger" style="padding: 5px">*</span></label>
+				<div class="col-sm-8">
+					<input type="number" class="form-control" name="maxCapacity" value="@Model.evacuationInfo.maxCapacity" required min="1" />
+				</div>
+			</div>
 
-							<!-- Community Kitchen -->
-							<div class="mb-3">
-								<div class="d-flex align-items-center">
-									<input type="number" class="form-control input-facility" name="communityKitchen" value="@Model.evacuationInfo.communityKitchen" placeholder="0" step="1" min="0" required />
-									<label class="form-label label-facility">Community Kitchen</label>
-								</div>
-							</div>
+			<hr class="my-4" />
 
-							<!-- Washing Area -->
-							<div class="mb-3">
-								<div class="d-flex align-items-center">
-									<input type="number" class="form-control input-facility" name="washingArea" value="@Model.evacuationInfo.washingArea" placeholder="0" step="1" min="0" required />
-									<label class="form-label label-facility">Washing Area</label>
-								</div>
-							</div>
+			<h4 class="text-start ">Available Facilities<span class="text-danger" style="padding: 5px">*</span></h4>
+			<p class="pb-2 text-start"><i>Fill the input boxes with the number of available facilities in the evacuation center</i></p>
 
-							<!-- Women-Friendly and Child-Friendly spaces -->
-							<div class="mb-3">
-								<div class="d-flex align-items-center">
-									<input type="number" class="form-control input-facility" name="womenChildSpace" value="@Model.evacuationInfo.womenChildSpace" placeholder="0" step="1" min="0" required />
-									<label class="form-label label-facility label-container">Women-Friendly and Child-Friendly spaces</label>
-								</div>
-							</div>
-
-							<!-- Multipurpose Areas -->
-							<div class="mb-3">
-								<div class="d-flex align-items-center">
-									<input type="number" class="form-control input-facility" name="multipurposeArea" value="@Model.evacuationInfo.multipurposeArea" placeholder="0" step="1" min="0" required />
-									<label class="form-label label-facility">Multipurpose Areas</label>
-								</div>
-							</div>
-						</div>
+			<div class="row">
+				<!-- Toilets -->
+				<div class="row mb-1">
+					<div class="d-flex align-items-center">
+						<input type="number" class="form-control input-facility" name="toilet" value="@Model.evacuationInfo.toilet" placeholder="0" step="1" min="0" required />
+						<label class="form-label label-facility">Toilets</label>
 					</div>
 				</div>
 
-				<!-- Cancel and Save Button -->
-				<div class="button-spacer">
-					<a class="btn btn-outline-secondary mr-10" href="/evacuationcenter/index" role="button">Cancel</a>
-					<button type="submit" class="btn btn-primary" id="submitBtn">Save</button>
+				<!-- Bathing Cubicle -->
+				<div class="row mb-1">
+					<div class="d-flex align-items-center">
+						<input type="number" class="form-control input-facility" name="bathingCubicle" value="@Model.evacuationInfo.bathingCubicle" placeholder="0" step="1" min="0" required />
+						<label class="form-label label-facility">Bathing Cubicle</label>
+					</div>
 				</div>
-			</form>
-		</div>	
+
+				<!-- Community Kitchen -->
+				<div class="row mb-1">
+					<div class="d-flex align-items-center">
+						<input type="number" class="form-control input-facility" name="communityKitchen" value="@Model.evacuationInfo.communityKitchen" placeholder="0" step="1" min="0" required />
+						<label class="form-label label-facility">Community Kitchen</label>
+					</div>
+				</div>
+
+				<!-- Washing Area -->
+				<div class="row mb-1">
+					<div class="d-flex align-items-center">
+						<input type="number" class="form-control input-facility" name="washingArea" value="@Model.evacuationInfo.washingArea" placeholder="0" step="1" min="0" required />
+						<label class="form-label label-facility">Washing Area</label>
+					</div>
+				</div>
+
+				<!-- Women-Friendly and Child-Friendly spaces -->
+				<div class="row mb-1">
+					<div class="d-flex align-items-center">
+						<input type="number" class="form-control input-facility" name="womenChildSpace" value="@Model.evacuationInfo.womenChildSpace" placeholder="0" step="1" min="0" required />
+						<label class="form-label label-facility text-start">Women-Friendly and Child-Friendly spaces</label>
+					</div>
+				</div>
+
+				<!-- Multipurpose Areas -->
+				<div class="row mb-1">
+					<div class="d-flex align-items-center">
+						<input type="number" class="form-control input-facility" name="multipurposeArea" value="@Model.evacuationInfo.multipurposeArea" placeholder="0" step="1" min="0" required />
+						<label class="form-label label-facility">Multipurpose Areas</label>
+					</div>
+				</div>
+			</div>
+
+
+			<br />
+
+			<!-- Cancel and Save Button -->
+			<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+				<button type="submit" class="btn btn-primary px-4" id="submitBtn">Save</button>
+				<a href="/evacuationcenter/index" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
+			</div>
+		</form>
 	</div>
 </div>
+
 
 <script>
 	const mobileInput = document.getElementById('mobileNum');
