--- a/Pages/evacuationcenter/Index.cshtml
+++ b/Pages/evacuationcenter/Index.cshtml
@@ -43,82 +43,86 @@
 	</div>
 }
 
-<div class="content">
-	<!-- Breadcrumb -->
-	<div class="row pb-2" aria-label="breadcrumb">
-		<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
-			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-				<li class="breadcrumb-item active"><a><strong>Evacuation Center</strong></a></li>
-			</ol>
-		</nav>
-	</div>
-	
-	<!-- Title and Add Button-->
-	<div class="row p-2">
-		<div class="col-12 d-flex align-items-center justify-content-between">
-			<h1><i class="bi bi-building-fill"></i>Evacuation Center</h1>
+<!-- Breadcrumb -->
+<div class="row pb-2" aria-label="breadcrumb">
+	<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
+			<li class="breadcrumb-item active"><a><strong>Evacuation Center</strong></a></li>
+		</ol>
+	</nav>
+</div>
 
-			<div class="d-flex justify-content-end align-items-center">
-				<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/evacuationcenter/add">
-					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
-					Add Evacuation Center
-				</a>
-				<a class="btn btn-primary mb-2 d-sm-none" href="/evacuationcenter/add">
-					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
-				</a>
-			</div>
-		</div>
-	</div>
+<!-- Title and Add Button-->
+<div class="row mb-2">
+	<div class="col-12 d-flex align-items-center justify-content-between">
+		<h1><i class="bi bi-person-lines-fill" style="padding: 0 5px 0 5px;"></i>Evacuation Center</h1>
 
-	<!-- Table -->
-	<div class="row p-2">
-		<div class="col-lg-12">
-			<table id="center-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
-				<thead>
-					<tr style="vertical-align: top;">
-						<th>#</th>
-						<th>Evacuation Center</th>
-						<th style="text-align: center;">Type<br /></th>
-						<th style="text-align: center;">Barangay<br /></th>
-						<th style="text-align: center;">Capacity</th>
-						<th style="text-align: center;">Status</th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-					@{ var counter = 1; }
-					@foreach (var item in Model.listEvacuation)
-					{
-						<tr>
-							<td width="5%">@counter</td>
-							<td width="25%">@item.centerName</td>
-							<td width="20%" style="text-align: center;">@item.centerType</td>
-							<td width="25%" style="text-align: center;">@item.barangayName</td>
-							<td width="10%" style="text-align: center;">@item.maxCapacity</td>
-							<td width="10%" style="text-align: center;">
-								@if (@item.status == "Active")
-								{
-									<span class="badge bg-success">@item.status</span>
-								}
-								else if (@item.status == "Inactive")
-								{
-									<span class="badge rounded-pill bg-light">@item.status</span>
-								}
-							</td>
-							<td width="5%">
-								<a class="btn btn-success edit-button" href="/evacuationcenter/profile/?centerID=@item.centerID">
-									View
-								</a>
-							</td>
-						</tr>
-						counter++;
-					}
-				</tbody>
-			</table>
+		<div class="d-flex justify-content-end align-items-center">
+			<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/evacuationcenter/add">
+				<i class="bi bi-plus-circle pt" style="padding-right: 5px;"></i>
+				Add Evacuation Center
+			</a>
+			<a class="btn btn-primary mb-2 d-sm-none" href="/evacuationcenter/add">
+				<i class="bi bi-plus-circle pt"></i>
+			</a>
 		</div>
 	</div>
 </div>
+
+<!-- Table -->
+<div class="row">
+	<table id="center-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+		<thead>
+			<tr style="vertical-align: top;">
+				<th width="5%">#</th>
+				<th width="30%" style="text-align: left;">Evacuation Center</th>
+				<th width="15%">Type</th>
+				<th width="18%">Barangay</th>
+				<th width="7%">Capacity</th>
+				<th width="10%">Status</th>
+				<th width="10%"> </th>
+			</tr>
+		</thead>
+		<tbody>
+			@{
+				var counter = 1;
+			}
+			@foreach (var item in Model.listEvacuation)
+			{
+				<tr>
+					<td>@counter</td>
+					<td>@item.centerName</td>
+					<td>@item.centerType</td>
+					<td>@item.barangayName</td>
+					<td>@item.maxCapacity</td>
+					<td>
+						@if (@item.status == "Active")
+						{
+							<span class="badge bg-success">@item.status</span>
+						}
+						else if (@item.status == "Inactive")
+						{
+							<span class="badge rounded-pill bg-light">@item.status</span>
+						}
+					</td>
+					<td>
+						<a class="btn btn-success edit-button" href="/evacuationcenter/profile/?centerID=@item.centerID">
+							View
+						</a>
+					</td>
+				</tr>
+				counter++;
+			}
+		</tbody>
+	</table>
+</div>
+
+<style>
+	.dropdown-menu {
+		min-width: 225px; /* Change for minimum width of the filter menu */
+	}
+</style>
 
 <!-- Making the table responsive -->
 <script>
@@ -126,42 +130,71 @@
 		var table = $('#center-table').DataTable({
 			responsive: true,
 			columnDefs: [
-				{ "orderable": true, "targets": [0, 1, 3, 4] }, // Sortable columns
-				{ "orderable": false, "targets": [2, 5, 6] } // Non-sortable columns
+				{ "orderable": true, "targets": [0, 1, 4] }, // Sortable columns
+				{ "orderable": false, "targets": [3, 2, 5, 6] } // Non-sortable columns
 			]
 		});
 
-		// Adding filters to specific columns
 		table.columns([2, 3, 5]).every(function () {
 			var column = this;
-			var select = $('<select><option value=""></option></select>')
-				.appendTo($(column.header()))
-				.on('change', function () {
-					var val = $.fn.dataTable.util.escapeRegex(
-						$(this).val()
-					);
+			var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
+			var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
+			var menu = $('<div class="dropdown-menu p-3"></div>').appendTo(filterContainer);
 
-					column
-						.search(val ? '^' + val + '$' : '', true, false)
-						.draw();
-				});
+			function updateFilterButton() {
+				var hasActiveFilter = column.search() !== '';
+				btn.toggleClass('btn-warning', hasActiveFilter);
+			}
 
 			column.data().unique().sort().each(function (d, j) {
-				// Only add the options "Active" and "Inactive" for the "Status" column
+				// Only add the options "Check-in" and "Check-out" for the "Status" column
 				if (column.index() === 5) {
 					// Set specific filter options only if they haven't been added
-					if (select.find("option[value='Active']").length == 0) {
-						select.append('<option value="Active">Active</option>');
+					if (menu.find("input[value='Active']").length === 0) {
+						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Active">' +
+							'<label class="form-check-label ps-1">Active</label></div>');
 					}
-					if (select.find("option[value='Inactive']").length == 0) {
-						select.append('<option value="Inactive">Inactive</option>');
+					if (menu.find("input[value='Inactive']").length === 0) {
+						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Inactive">' +
+							'<label class="form-check-label ps-1">Inactive</label></div>');
 					}
 				}
+
 				// For other columns, show all unique values as filter options
 				else {
-					select.append('<option value="' + d + '">' + d + '</option>');
+					menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="' + d + '">' +
+						'<label class="form-check-label ps-1">' + d + '</label></div>');
 				}
 			});
+
+
+			menu.prepend('<div class="form-check"><input class="form-check-input select-all" type="checkbox" value="select-all">' +
+				'<label class="form-check-label ps-1">Select All</label></div>');
+
+			menu.append('<hr class="dropdown-divider"><div class="p-1"><button type="button" class="btn btn-sm btn-light clear-filter"><i class="bi bi-eraser pe-1"></i>Clear Filter</button></div>');
+
+			menu.find('.form-check-input, .clear-filter').on('click', function () {
+				var checked = $(this).prop('checked');
+
+				if ($(this).hasClass('form-check-input')) {
+					if ($(this).val() === 'select-all') {
+						menu.find('.form-check-input').prop('checked', checked);
+					} else if (!checked) {
+						menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+					}
+				} else {
+					menu.find('.form-check-input').prop('checked', false);
+					menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+				}
+
+				var selectedValues = menu.find('.form-check-input:checked').map(function () {
+					return $(this).val();
+				}).get();
+
+				column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
+				updateFilterButton();
+			});
+			updateFilterButton();
 		});
 	});
 </script>
