Removed text alignment in Evacuation Center.

--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -76,7 +76,7 @@
 		<thead>
 			<tr style="vertical-align: top;">
 				<th width="5%">#</th>
-				<th width="30%" style="text-align: left;">Evacuation Center</th>
+				<th width="30%">Evacuation Center</th>
 				<th width="15%">Type</th>
 				<th width="18%">Barangay</th>
 				<th width="7%">Capacity</th>
